--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -13,14 +13,14 @@
   display: grid;
 
   @media (--not-mobile) {
-    row-gap: 60px;
+    row-gap: 64px;
     column-gap: 55px;
     grid-template-columns: repeat(auto-fill, minmax(324px, 1fr));
   }
 
   @media (--desktop) {
     grid-template-columns: repeat(auto-fill, minmax(245px, 1fr));
-    row-gap: 0;
+    row-gap: 5px;
     column-gap: 80px;
   }
 }
@@ -76,7 +76,7 @@
     margin-bottom: 10px;
 
     @media (--not-mobile) {
-      margin-top: 140px;
+      margin-top: 125px;
     }
 
     @media (--desktop) {
@@ -172,6 +172,10 @@
 
   &:last-child {
     margin-bottom: 20px;
+
+    @media (--desktop) {
+      margin-bottom: 20px;
+    }
   }
 
   @media (--not-mobile) {
@@ -198,14 +202,17 @@
 
   @media (--not-mobile) {
     max-width: 145px;
-    margin: 18px 0 18px;
     font-size: 20px;
     line-height: 24px;
     text-align: center;
+    margin-top: 18px;
+    margin-inline: auto;
+    margin-bottom: 17px;
   }
 
   @media (--desktop) {
     margin-top: 5px;
+    margin-bottom: 20px;
   }
 
   &--more {
@@ -236,13 +243,13 @@
   line-height: 16px;
   color: var(--description-color);
   margin-top: 10px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 
   @media (--not-mobile) {
     font-size: 16px;
     line-height: 18px;
     width: 170px;
-    margin-bottom: 84px;
+    margin-top: 15px;
   }
 }
 
@@ -273,14 +280,15 @@
     @media (--not-mobile) {
       width: 168px;
       height: 200px;
-      margin-top: 16px;
-      margin-bottom: 5px;
+      margin-top: 9px;
+      margin-bottom: 13px;
     }
 
     @media (--desktop) {
       width: 172px;
       height: 196px;
-      margin-bottom: 21px;
+      margin-bottom: 20px;
+      margin-top: 17px;
     }
   }
 }
