--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -30,7 +30,7 @@
 
   @media (--desktop) {
     padding-top: 0;
-    margin-bottom: 150px;
+    margin-bottom: 142px;
   }
 }
 
@@ -125,7 +125,7 @@
 
     &--days {
       @media (--not-mobile) {
-        padding: 15px 30px 25px;
+        padding: 15px 27px 25px;
         margin-left: 15px;
       }
     }
@@ -133,6 +133,10 @@
     &--price {
       @media (--mobile) {
         margin-left: 0;
+      }
+
+      @media (--desktop) {
+        margin-left: 73px;
       }
     }
   }
@@ -186,14 +190,14 @@
     @media (--desktop) {
       margin-left: 0;
       flex-direction: row;
-      margin-top: 15px;
+      margin-top: 8px;
     }
   }
 
   .motivation__value {
     &--price {
       @media (--desktop) {
-        margin-left: 73px;
+        margin-left: 65px;
       }
     }
   }
@@ -207,7 +211,7 @@
   @media (--desktop) {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 18px;
+    padding-bottom: 10px;
   }
 }
 
@@ -294,8 +298,10 @@
 }
 
 .motivation__controls {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  // display: grid;
+  // grid-template-columns: 1fr auto 1fr;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
   padding-bottom: 40px;
   width: 219px;
