--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -11,7 +11,7 @@
     <img class="main-header__logo-text" src="./img/logo.svg#text" alt="Cat Energy" width="101" height="19">
   </a>
 
-  <nav class="main-nav main-nav--closed">
+  <nav class="main-nav">
     <button class="main-nav__toggle" type="button">
       <span class="main-nav__icon-burger"></span>
       <span class="visually-hidden">Открыть меню</span>
