--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -66,12 +66,12 @@
   min-width: 320px;
   border: none;
   height: 362px;
-  object-fit: cover;
+  // object-fit: cover;
 
   @media (--not-mobile) {
     min-height: 400px;
     width: 100%;
-    object-fit: cover;
+    // object-fit: cover;
   }
 
   @media (--desktop) {
