--- a/source/sass/blocks/more-goods.scss
+++ b/source/sass/blocks/more-goods.scss
@@ -14,7 +14,7 @@
   @media (--desktop) {
     width: 100%;
     max-width: 896px;
-    padding-top: 15px;
+    padding-top: 10px;
   }
 }
 
@@ -26,6 +26,7 @@
 
   @media (--not-mobile) {
     width: 50%;
+    margin-bottom: 20px;
   }
 
   @media (--desktop) {
@@ -33,6 +34,7 @@
     width: 100%;
     margin-left: auto;
     margin-right: 40px;
+    margin-bottom: 0;
   }
 }
 
@@ -68,10 +70,12 @@
   font-size: 14px;
   line-height: 14px;
   color: var(--description-color);
+  margin-bottom: 10px;
 
   @media (--not-mobile) {
     font-size: 16px;
     line-height: 20px;
+    margin-bottom: 0;
   }
 
   @media (--desktop) {
