--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -494,6 +494,8 @@ input[type="number"] {
 .form__feedback {
   width: 100%;
   height: 150px;
+  min-height: 150px;
+  max-height: 90vh;
   padding-top: 10px;
   padding-left: 15px;
   border: 1px solid #e7e7e7;
@@ -501,6 +503,7 @@ input[type="number"] {
 
   @media (--not-mobile) {
     height: 174px;
+    min-height: 174px;
     padding-top: 10px;
     padding-left: 20px;
   }
@@ -508,7 +511,6 @@ input[type="number"] {
   @media (--desktop) {
     padding-top: 15px;
     padding-left: 20px;
-    min-height: auto;
   }
 
   &:hover {
